kubernetes/flux/releases/gcp/dev/http-echo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: http-echo
  labels:
    app: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: gcr.io/google_containers/echoserver:1.10
        ports:
        - containerPort: 8080
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "1000m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "1000m"
