kubernetes/flux/releases/gcp/dev/http-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: http-echo
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: http-echo
